feat(server): install package tsconfig-paths later
